--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 	"type": "module",
 	"scripts": {
 		"start": "eleventy --serve --quiet",
-		"build": "rm -rf dist && eleventy"
+		"build": "rm -rf dist && eleventy",
+		"editorconfig": "editorconfig-checker",
+		"stylelint": "stylelint \"src/styles/**/*.css\""
 	},
 	"engines": {
 		"node": "22"
@@ -14,7 +16,10 @@
 	"devDependencies": {
 		"@11ty/eleventy-plugin-rss": "^2.0.4",
 		"@11ty/eleventy": "^3.1.2",
+		"editorconfig-checker": "^6.1.0",
 		"js-yaml": "^4.1.0",
-		"lightningcss": "^1.30.1"
+		"lightningcss": "^1.30.1",
+		"stylelint-order": "^7.0.0",
+		"stylelint": "^16.24.0"
 	}
 }
