--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
 	],
 	"devDependencies": {
 		"@11ty/eleventy": "^3.1.2",
+		"@11ty/eleventy-img": "^6.0.4",
 		"@11ty/eleventy-plugin-rss": "^2.0.4",
 		"editorconfig-checker": "^6.1.0",
+		"glob": "^11.0.3",
 		"js-yaml": "^4.1.0",
 		"lefthook": "^2.0.2",
 		"lightningcss": "^1.30.1",
