Use different titles

--- a/src/pages/tags/index.yml
+++ b/src/pages/tags/index.yml
@@ -8,3 +8,5 @@ pagination:
   addAllPagesToCollections: true
 permalink: /tags/{{ tag }}/index.html
 layout: page.njk
+eleventyComputed:
+  title: 'News with the “{{ tag }}” tag'
