--- a/src/pages/home/index.yml
+++ b/src/pages/home/index.yml
@@ -1,2 +1,7 @@
 layout: page.njk
-permalink: /index.html
+pagination:
+  data: collections.news
+  size: 12
+permalink: '{% if pagination.pageNumber > 0 %}/page/{{ pagination.pageNumber + 1 }}/{% else %}/{% endif %}index.html'
+eleventyComputed:
+  title: '{% if pagination.pageNumber > 0 %}Page {{ pagination.pageNumber + 1 }}{% endif %}'
