--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,7 +2,7 @@ pre-commit:
   parallel: true
   jobs:
     - name: EditorConfig
-      run: npm run editorconfig {staged_files}
+      run: npx editorconfig {staged_files}
     - name: Stylelint
-      glob: '*.css'
-      run: npm run stylelint {staged_files}
+      glob: '**/*.css'
+      run: npx stylelint {staged_files}
