--- a/src/news/2025/09/double-focus-ring/index.yml
+++ b/src/news/2025/09/double-focus-ring/index.yml
@@ -1,5 +1,6 @@
 title: 'Taking a shot at the double focus ring problem'
 alt: 'Taking a shot at the double focus ring problem using modern CSS'
+description: 'Building a universal focus outline with inner and outer rings using modern CSS features.'
 
 date: 2025-09-26
 link: https://piccalil.li/blog/taking-a-shot-at-the-double-focus-ring-problem-using-modern-css/
