--- a/src/news/2025/09/firefox-143/index.yml
+++ b/src/news/2025/09/firefox-143/index.yml
@@ -1,5 +1,6 @@
 title: 'What’s new in Firefox 143 for developers'
 alt: 'Firefox 143'
+description: 'New color formats in color input, ::details-content, ::before::marker, and grid improvements.'
 
 date: 2025-09-18
 link: https://developer.mozilla.org/en-US/docs/Mozilla/Firefox/Releases/143
