--- a/src/news/2025/10/tables-api/index.yml
+++ b/src/news/2025/10/tables-api/index.yml
@@ -1,5 +1,6 @@
 title: 'Abandonware of the web: do you know that there is an HTML tables API?'
 alt: 'Abandonware of the web: do you know that there is an HTML tables API?'
+description: 'Built-in DOM methods like insertRow and insertCell make building and querying tables easier.'
 
 date: 2025-10-09
 link: https://christianheilmann.com/2025/10/08/abandonware-of-the-web-do-you-know-that-there-is-an-html-tables-api/
