--- a/src/news/2025/10/wpt-fixed-web-platform/index.yml
+++ b/src/news/2025/10/wpt-fixed-web-platform/index.yml
@@ -1,5 +1,6 @@
 title: 'How a shared test suite fixed the web’s biggest problems'
 alt: 'How a shared test suite fixed the web’s biggest problems'
+description: 'History of Web Platform Tests that eliminated browser discrepancies and enabled Interop.'
 
 date: 2025-10-03
 link: https://thenewstack.io/how-a-shared-test-suite-fixed-the-webs-biggest-problems/
