--- a/src/news/2025/09/browserlist-baseline/index.yml
+++ b/src/news/2025/09/browserlist-baseline/index.yml
@@ -1,5 +1,6 @@
 title: 'Baseline in Browserslist'
 alt: 'Check compatible browsers. Browserlist'
+description: 'Browserslist 4.26.0 now supports defining browser support using Baseline availability terms.'
 
 date: 2025-09-17
 link: https://browsersl.ist/#:~:text=select%20browser%20by%20baseline
