--- a/src/news/2025/09/inclusive-design/index.yml
+++ b/src/news/2025/09/inclusive-design/index.yml
@@ -1,5 +1,6 @@
 title: 'Inclusive Design 24'
 alt: 'Inclusive Design 24'
+description: 'Free 24-hour accessibility conference with talks on design, testing, legislation, and more.'
 
 date: 2025-09-25
 link: https://www.youtube.com/playlist?list=PLn7dsvRdQEfFTeoA8kZcsASPbYi2rf4C0
