--- a/src/news/2025/09/learn-svelte/index.yml
+++ b/src/news/2025/09/learn-svelte/index.yml
@@ -1,5 +1,6 @@
 title: 'Complete Svelte 5 course'
 alt: 'Learn Svelte'
+description: 'Three-hour Joy of Code course on Svelte 5: basics, reactivity, state, and animations.'
 
 date: 2025-09-23
 link: https://joyofcode.xyz/learn-svelte
