--- a/src/news/2025/10/css-podcast/index.yml
+++ b/src/news/2025/10/css-podcast/index.yml
@@ -1,5 +1,6 @@
 title: 'Custom functions and if() in CSS'
 alt: 'CSS Podcast. Episode 92: CSS if() and custom functions'
+description: 'Una and Bramus discuss unusual CSS features that could change how we write styles.'
 
 date: 2025-10-15
 link: https://thecsspodcast.libsyn.com/92-css-if-and-custom-functions
