--- a/src/news/2025/10/pragmatic-modern-css/index.yml
+++ b/src/news/2025/10/pragmatic-modern-css/index.yml
@@ -1,5 +1,6 @@
 title: 'A pragmatic guide to modern CSS colors'
 alt: 'A pragmatic guide to modern CSS colours - part one'
+description: 'Kevin Powell explains color spaces, relative colors, and color themes in CSS.'
 
 date: 2025-10-07
 link: https://piccalil.li/blog/a-pragmatic-guide-to-modern-css-colours-part-one/
