--- a/src/news/2025/10/pwa-scorecards/index.yml
+++ b/src/news/2025/10/pwa-scorecards/index.yml
@@ -1,5 +1,6 @@
 title: 'PWA browser scorecards'
 alt: 'PWA browser scorecards'
+description: 'Dashboard comparing PWA capabilities across mobile browsers using Can I Use and MDN data.'
 
 date: 2025-10-14
 link: https://pwascore.com/
