--- a/src/news/2025/10/react-compiler/index.yml
+++ b/src/news/2025/10/react-compiler/index.yml
@@ -1,5 +1,6 @@
 title: 'React Compiler v1.0'
 alt: 'React Compiler v1.0'
+description: 'Stable compiler auto-optimizes components, improves speeds up to 12%, used in Meta apps.'
 
 date: 2025-10-23
 link: https://react.dev/blog/2025/10/07/react-compiler-1
