--- a/src/news/2025/10/vite-plus/index.yml
+++ b/src/news/2025/10/vite-plus/index.yml
@@ -1,5 +1,6 @@
 title: 'Announcing Vite+: a unified toolchain for JavaScript'
 alt: 'Vite+'
+description: 'Rust-based unified toolchain with build, test, lint, format, and visual tools for JS projects.'
 
 date: 2025-10-21
 link: https://voidzero.dev/posts/announcing-vite-plus
