Use the same pagination

--- a/src/pages/tags/index.yml
+++ b/src/pages/tags/index.yml
@@ -5,6 +5,8 @@ pagination:
   filter:
     - all
     - news
+    - newsByYear
+    - newsByYearMonth
   addAllPagesToCollections: true
 permalink: /tags/{{ tag }}/index.html
 layout: page.njk
