--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"node": "22"
 	},
 	"browserslist": [
-		"baseline widely available"
+		"baseline widely available, safari 15"
 	],
 	"devDependencies": {
 		"@11ty/eleventy": "^3.1.2",
