--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,13 @@
+[build]
+  publish = "dist"
+  command = "npm run build"
+
+[build.environment]
+  NODE_VERSION = "22"
+
+[[plugins]]
+  package = "./netlify/plugins/cache"
+
 [[redirects]]
   from = "/feed/"
   to = "/feed/index.xml"
