--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
 		"@11ty/eleventy": "^3.1.2",
 		"@11ty/eleventy-img": "^6.0.4",
 		"@11ty/eleventy-plugin-rss": "^2.0.4",
-		"@humanwhocodes/crosspost": "^1.0.1",
+		"@humanwhocodes/crosspost": "^1.0.2",
+		"@netlify/cache-utils": "^6.0.4",
 		"editorconfig-checker": "^6.1.1",
-		"glob": "^11.0.3",
-		"js-yaml": "^4.1.0",
-		"lefthook": "^2.0.2",
+		"glob": "^12.0.0",
+		"js-yaml": "^4.1.1",
+		"lefthook": "^2.0.4",
 		"lightningcss": "^1.30.2",
-		"sharp": "^0.34.4",
+		"sharp": "^0.34.5",
 		"stylelint": "^16.25.0",
 		"stylelint-order": "^7.0.0"
 	}
