--- a/src/news/2025/09/css-alignment/index.yml
+++ b/src/news/2025/09/css-alignment/index.yml
@@ -1,5 +1,5 @@
 title: 'The fundamentals of CSS alignment'
-alt: 'The fundamentals of CSS alignment'
+alt: 'The fundamentals of CSS alignment.'
 description: 'Comprehensive guide to aligning elements in flexbox, grid, positioning, and logical properties.'
 
 date: 2025-09-19
