--- a/src/news/2025/09/safari-26/index.yml
+++ b/src/news/2025/09/safari-26/index.yml
@@ -1,5 +1,5 @@
 title: 'WebKit features in Safari 26'
-alt: 'WebKit features in Safari 26'
+alt: 'WebKit features in Safari 26.'
 description: '75 new features including CSS Anchor Positioning, scroll animations, HDR, and <model> element.'
 
 date: 2025-09-16
