--- a/src/news/2025/09/screen-reader-html/index.yml
+++ b/src/news/2025/09/screen-reader-html/index.yml
@@ -1,5 +1,5 @@
 title: 'Screen reader HTML support'
-alt: 'Screen reader HTML support'
+alt: 'Screen reader HTML support.'
 description: 'Compatibility table of HTML elements in JAWS, NVDA, VoiceOver, and TalkBack.'
 
 date: 2025-09-30
