--- a/src/news/2025/10/dead-framework-theory/index.yml
+++ b/src/news/2025/10/dead-framework-theory/index.yml
@@ -1,5 +1,5 @@
 title: 'Dead framework theory'
-alt: 'Dead framework theory'
+alt: 'Dead framework theory.'
 description: 'How LLMs trained on React could make it the platform by default, drowning new frameworks.'
 
 date: 2025-10-17
