--- a/src/news/2025/10/frameworks-performance/index.yml
+++ b/src/news/2025/10/frameworks-performance/index.yml
@@ -1,5 +1,5 @@
 title: 'Evaluating frameworks performance'
-alt: 'I built the same app 10 times: evaluating frameworks for mobile performance'
+alt: 'I built the same app 10 times: evaluating frameworks for mobile performance.'
 description: 'Comparing 10 meta-frameworks: Marko, SolidStart, SvelteKit, Qwik lead. React has limits.'
 
 date: 2025-10-29
