--- a/src/news/2025/10/ranger-slider-thumbs/index.yml
+++ b/src/news/2025/10/ranger-slider-thumbs/index.yml
@@ -1,5 +1,5 @@
 title: 'A native way of having more than one thumb on a range slider in HTML'
-alt: 'A native way of having more than one thumb on a range slider in HTML'
+alt: 'A native way of having more than one thumb on a range slider in HTML.'
 description: 'Proposed <rangegroup> element for multi-thumb range sliders with ::slider-thumb() styling.'
 
 date: 2025-10-22
