--- a/src/news/2025/10/react-foundation/index.yml
+++ b/src/news/2025/10/react-foundation/index.yml
@@ -1,5 +1,5 @@
 title: 'Introducing the React Foundation'
-alt: 'React Foundation'
+alt: 'React Foundation.'
 description: 'New nonprofit under Linux Foundation to oversee React, React Native, and JSX long-term.'
 
 date: 2025-10-08
