--- a/src/news/2025/09/color-shifting-css/index.yml
+++ b/src/news/2025/09/color-shifting-css/index.yml
@@ -1,5 +1,5 @@
 title: 'Color shifting in CSS'
-alt: 'Color shifting in CSS. An exploration of color animation techniques'
+alt: 'Color shifting in CSS. An exploration of color animation techniques.'
 description: 'Smooth color animations using hue-rotate() and @property without gray artifacts.'
 
 date: 2025-09-11
