--- a/src/news/2025/09/learn-css-refresh/index.yml
+++ b/src/news/2025/09/learn-css-refresh/index.yml
@@ -1,5 +1,5 @@
 title: 'Nine new modules in Learn CSS'
-alt: 'A refresh of Learn CSS with nine new modules'
+alt: 'A refresh of Learn CSS with nine new modules.'
 description: 'Learn CSS course updated with nesting, container queries, anchor positioning, and more.'
 
 date: 2025-09-10
