--- a/src/news/2025/09/liquid-glass-css-svg/index.yml
+++ b/src/news/2025/09/liquid-glass-css-svg/index.yml
@@ -1,5 +1,5 @@
 title: 'Liquid glass effect in the browser: refraction with CSS and SVG'
-alt: 'Liquid glass in the browser: refraction with CSS and SVG'
+alt: 'Liquid glass in the browser: refraction with CSS and SVG.'
 description: 'Recreating the controversial “liquid glass” look using SVG filters inspired by iOS and macOS.'
 
 date: 2025-09-09
