--- a/src/news/2025/10/a11y-testing/index.yml
+++ b/src/news/2025/10/a11y-testing/index.yml
@@ -1,5 +1,5 @@
 title: 'Simplified accessibility testing right from your browser'
-alt: 'Simplified accessibility testing right from your browser'
+alt: 'Simplified accessibility testing right from your browser.'
 description: 'Bookmarklets for checking color contrast and running Axe accessibility tests on any site.'
 
 date: 2025-10-02
