--- a/src/news/2025/10/chrome-142/index.yml
+++ b/src/news/2025/10/chrome-142/index.yml
@@ -1,5 +1,5 @@
 title: 'What’s new in Chrome 142'
-alt: 'New in Chrome 142'
+alt: 'New in Chrome 142.'
 description: 'CSS style queries range syntax, if(), interestfor attribute, and unified select rendering.'
 
 date: 2025-10-30
