--- a/src/news/2025/10/deprecating-xslt/index.yml
+++ b/src/news/2025/10/deprecating-xslt/index.yml
@@ -1,5 +1,5 @@
 title: 'Deprecating XSLT in browsers'
-alt: 'XSLT'
+alt: 'XSLT.'
 description: 'Chrome plans to remove XSLT by 2027 due to low usage and security risks. Other browsers agree.'
 
 date: 2025-10-28
