--- a/src/news/2025/10/firefox-144/index.yml
+++ b/src/news/2025/10/firefox-144/index.yml
@@ -1,5 +1,5 @@
 title: 'What’s new in Firefox 144 for developers'
-alt: 'Firefox 144'
+alt: 'Firefox 144.'
 description: 'View Transitions in SPAs, command/commandfor attributes, getOrInsert(), and moveBefore().'
 
 date: 2025-10-16
