--- a/src/news/2025/10/mdn-developer-survey/index.yml
+++ b/src/news/2025/10/mdn-developer-survey/index.yml
@@ -1,5 +1,5 @@
 title: 'MDN developer survey 2025'
-alt: 'MDN developer survey 2025'
+alt: 'MDN developer survey 2025.'
 description: '10-minute anonymous survey to make MDN documentation more useful for everyday work.'
 
 date: 2025-10-20
