--- a/src/news/2025/10/state-of-js-2025/index.yml
+++ b/src/news/2025/10/state-of-js-2025/index.yml
@@ -1,5 +1,5 @@
 title: 'State of JavaScript 2025'
-alt: 'State of JavaScript 2025'
+alt: 'State of JavaScript 2025.'
 description: 'Annual JavaScript survey now open until November 1, takes 15–20 minutes to complete.'
 
 date: 2025-10-01
