--- a/src/news/2025/10/tables-api/index.yml
+++ b/src/news/2025/10/tables-api/index.yml
@@ -1,5 +1,5 @@
 title: 'Abandonware of the web: do you know that there is an HTML tables API?'
-alt: 'Abandonware of the web: do you know that there is an HTML tables API?'
+alt: 'Abandonware of the web: do you know that there is an HTML tables API?.'
 description: 'Built-in DOM methods like insertRow and insertCell make building and querying tables easier.'
 
 date: 2025-10-09
