--- a/src/news/2025/11/safari-26-1/index.yml
+++ b/src/news/2025/11/safari-26-1/index.yml
@@ -1,5 +1,5 @@
 title: 'WebKit Features for Safari 26.1'
-alt: 'WebKit Features for Safari 26.1'
+alt: 'WebKit Features for Safari 26.1.'
 description: 'SVG units support, improved CSS Anchor Positioning, and 36 fixes across CSS and WebGPU.'
 
 date: 2025-11-04
