--- a/src/news/2025/11/sethtml-trusted-types-sanitizer/index.yml
+++ b/src/news/2025/11/sethtml-trusted-types-sanitizer/index.yml
@@ -1,5 +1,5 @@
 title: 'setHTML(), Trusted Types and the Sanitizer API'
-alt: 'Oct 29, 2025. setHTML(), Trusted Types and the Sanitizer API. olliewilliams.xyz'
+alt: 'Oct 29, 2025. setHTML(), Trusted Types and the Sanitizer API. olliewilliams.xyz.'
 description: 'New setHTML() and Sanitizer API prevent XSS by safely inserting HTML into the DOM.'
 
 date: 2025-11-03
