--- a/netlify.toml
+++ b/netlify.toml
@@ -24,7 +24,18 @@
     X-Content-Type-Options = "nosniff"
     Content-Security-Policy = """
       default-src 'self';
+      base-uri 'self';
+      object-src 'none';
+      script-src 'none';
+      style-src 'self';
+      img-src 'self' data:;
+      font-src 'self';
+      connect-src 'self';
+      form-action 'self';
       frame-ancestors 'self';
+      upgrade-insecure-requests;
       """
     Cross-Origin-Resource-Policy = "same-origin"
     Referrer-Policy = "strict-origin-when-cross-origin"
+    Strict-Transport-Security = "max-age=63072000; includeSubDomains; preload"
+    Cross-Origin-Opener-Policy = "same-origin"
