Use code in titles
Dammit

--- a/src/news/2025/11/color‑input-picker-component/index.yml
+++ b/src/news/2025/11/color‑input-picker-component/index.yml
@@ -1,4 +1,4 @@
-title: '<color‑input>, a modern color picker web component'
+title: '`<color‑input>`, a modern color picker web component'
 alt: 'Сolor-input. A modern color picker web component with wide-gamut support.'
 description: 'Advanced color picker supports wide-gamut and multiple color spaces.'
 
