--- a/src/news/2025/11/hidden-until-found-sections/index.yml
+++ b/src/news/2025/11/hidden-until-found-sections/index.yml
@@ -1,4 +1,4 @@
-title: 'Searchable, collapsible sections with hidden=until-found'
+title: 'Searchable, collapsible sections with `hidden="until-found"`'
 alt: 'Searchable, collapsible sections with hidden=until-found. Nathan Knowler.'
 description: 'Enhancing collapsible sections with progressive discovery and better find-in-page support.'
 
