--- a/src/news/2025/11/output-html-secret/index.yml
+++ b/src/news/2025/11/output-html-secret/index.yml
@@ -1,4 +1,4 @@
-title: 'HTML’s best kept secret: the <output> tag'
+title: 'HTML’s best kept secret: the `<output>` tag'
 alt: 'Output. HTML’s best kept secret.'
 description: 'Rediscover the forgotten HTML element that improves accessibility.'
 
