--- a/src/news/2025/11/input-type-number-guide/index.yml
+++ b/src/news/2025/11/input-type-number-guide/index.yml
@@ -1,4 +1,4 @@
-title: 'A complete guide to the <input type="number">'
+title: 'A complete guide to the `<input type="number">`'
 alt: 'A complete guide to the HTML number input. For Chrome/Edge and Safari. For Firefox.'
 description: 'A detailed walkthrough of the input number, its quirks and best practices in modern browsers.'
 
