--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@11ty/eleventy": "^3.1.2",
 		"@11ty/eleventy-img": "^6.0.4",
 		"@11ty/eleventy-plugin-rss": "^2.0.4",
+		"@minify-html/node": "^0.18.1",
 		"@netlify/blobs": "^8.1.0",
 		"@netlify/cache-utils": "^6.0.4",
 		"editorconfig-checker": "^6.1.1",
