Update alts for January

--- a/src/news/2026/01/bundle-size-investigation/index.yml
+++ b/src/news/2026/01/bundle-size-investigation/index.yml
@@ -1,5 +1,5 @@
 title: 'Bundle size investigation. A step-by-step guide to shrinking your JavaScript'
-alt: 'Illustration of a fallen, decorated Christmas tree with a cat in a star-patterned pot, above the headline “Bundle Size Investigation: A Step-by-Step Guide to Shrinking Your JavaScript”.'
+alt: 'Illustration of a fallen, decorated Christmas tree with a cat sitting in a star-patterned pot, above the headline “Bundle Size Investigation: A Step-by-Step Guide to Shrinking Your JavaScript”.'
 description: 'A checklist for hunting megabytes, and shipping less JS.'
 
 date: 2026-01-14
