--- a/src/news/2026/01/date-is-out-temporal-is-in/index.yml
+++ b/src/news/2026/01/date-is-out-temporal-is-in/index.yml
@@ -1,5 +1,5 @@
 title: 'Date is out, Temporal is in'
-alt: 'Date is out, Temporal is in. Piccalilli. From set.studio. Mat “Wilto” Marquis.'
+alt: 'Graphic with headline “Date is out, Temporal is in”. Footer text reads “Piccalilli from set.studio” and “Mat ‘Wilto’ Marquis — 07 January 2026”, alongside a circular portrait.'
 description: 'A quick tour of Temporal, the saner successor to JavaScript’s Date.'
 
 date: 2026-01-12
