--- a/src/news/2026/01/es2026-javascript-upgrade/index.yml
+++ b/src/news/2026/01/es2026-javascript-upgrade/index.yml
@@ -1,5 +1,5 @@
 title: 'ES2026 solves JavaScript headaches with dates, math and modules'
-alt: 'ES2026 solves JavaScript headaches with dates, math and modules. The New Stack. JS. ECMA International.'
+alt: 'Graphic with headline “ES2026 Solves JavaScript Headaches With Dates, Math and Modules”, showing JS, ECMA International, and The New Stack logos.'
 description: 'Smarter tools and faster performance for JavaScript coming in ES2026.'
 
 date: 2026-01-05
