--- a/src/news/2026/01/initiating-navigations-with-navigation-api/index.yml
+++ b/src/news/2026/01/initiating-navigations-with-navigation-api/index.yml
@@ -1,5 +1,5 @@
 title: 'Initiating navigations with the Navigation API'
-alt: 'Initiating navigations with the Navigation API. Olliewilliams.xyz.'
+alt: 'Graphic with headline “Initiating navigations with the Navigation API”, showing code snippets and the site name “olliewilliams.xyz”, alongside a circular portrait.'
 description: 'Tips for triggering, intercepting, and timing navigations with navigation.'
 
 date: 2026-01-15
