--- a/src/news/2026/01/scope-css-baseline/index.yml
+++ b/src/news/2026/01/scope-css-baseline/index.yml
@@ -1,5 +1,5 @@
 title: 'How to `@scope` CSS now that it’s Baseline'
-alt: 'How to @scope CSS now that it’s Baseline. Frontend Masters.'
+alt: 'Graphic with headline “How to @scope CSS Now That It’s Baseline”, code snippet showing @scope, and the Frontend Masters logo.'
 description: 'Full browser support makes scoped CSS practical for cleaner, modular styling.'
 
 date: 2026-01-06
