--- a/src/news/2026/01/web-component-starter-template/index.yml
+++ b/src/news/2026/01/web-component-starter-template/index.yml
@@ -1,5 +1,5 @@
 title: 'A production-ready web component starter template'
-alt: 'A production-ready web component starter template. Developer tools, open source, web components.'
+alt: 'Graphic with headline “A Production-Ready Web Component Starter Template”, accompanied by code snippets and tags reading “developer tools”, “open source”, and “web components”.'
 description: 'Skip boilerplate with scaffolded tests, CI, and secure npm publishing.'
 
 date: 2026-01-13
