--- a/src/news/2026/01/debugging-performance-chrome-devtools/index.yml
+++ b/src/news/2026/01/debugging-performance-chrome-devtools/index.yml
@@ -1,5 +1,5 @@
 title: 'Debugging web performance with Chrome DevTools'
-alt: 'Chrome DevTools for debugging web performance.'
+alt: 'Graphic titled “Chrome DevTools for Debugging Web Performance”, with a DevTools performance timeline screenshot and panels labeled “Insights”, “LCP request discovery”, and metrics like “LCP 8.28s”.'
 description: 'A practical checklist for spotting bottlenecks and validating fixes in real time.'
 
 date: 2026-01-07
